--- a/app.json
+++ b/app.json
@@ -27,6 +27,14 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router"]
+    "plugins": ["expo-router"],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "15cf4545-901a-4d49-8ec7-f18f92a76818"
+      }
+    }
   }
 }
