--- a/package.json
+++ b/package.json
@@ -4,23 +4,31 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@reduxjs/toolkit": "^2.2.3",
     "@tamagui/config": "^1.94.0",
+    "@types/bluebird": "^3.5.42",
+    "bluebird": "^3.7.2",
+    "dayjs": "^1.11.10",
     "expo": "~50.0.14",
     "expo-constants": "~15.4.5",
+    "expo-dev-client": "~3.3.11",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
+    "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-webview": "^13.8.4",
+    "react-redux": "^9.1.0",
     "tamagui": "^1.94.0"
   },
   "devDependencies": {
