--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-webview": "^13.8.4",
     "react-redux": "^9.1.0",
-    "tamagui": "^1.94.0"
+    "tamagui": "^1.94.0",
+    "expo-updates": "~0.24.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
