--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-webview": "^13.8.4",
     "react-redux": "^9.1.0",
     "tamagui": "^1.94.0",
-    "expo-updates": "~0.24.12"
+    "expo-updates": "~0.24.12",
+    "react-native-reanimated": "~3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
