--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@gluestack-style/react": "^1.0.48",
+    "@gluestack-ui/config": "^1.1.18",
+    "@gluestack-ui/themed": "^1.1.18",
+    "@react-native-cookies/cookies": "^6.2.1",
     "@reduxjs/toolkit": "^2.2.3",
     "@tamagui/config": "^1.94.0",
+    "@tamagui/toast": "^1.94.0",
     "@types/bluebird": "^3.5.42",
     "bluebird": "^3.7.2",
+    "burnt": "^0.12.2",
     "dayjs": "^1.11.10",
     "expo": "~50.0.14",
     "expo-constants": "~15.4.5",
@@ -21,17 +27,19 @@
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.12",
     "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-keychain": "^8.2.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^13.4.0",
     "react-native-webview": "^13.8.4",
     "react-redux": "^9.1.0",
-    "tamagui": "^1.94.0",
-    "expo-updates": "~0.24.12",
-    "react-native-reanimated": "~3.6.2"
+    "tamagui": "^1.94.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
