--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.12",
     "expo-web-browser": "~12.8.2",
+    "node-html-parser": "^6.1.13",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.16.0",
