--- a/eas.json
+++ b/eas.json
@@ -17,7 +17,10 @@
     "preview": {
       "distribution": "internal"
     },
-    "production": {}
+    "production": {
+      "channel": "production",
+      "env": { "ANDROID_SDK_ROOT": "/Users/sidpremkumar/Library/Android/sdk" }
+    }
   },
   "submit": {
     "production": {}
