--- a/app.json
+++ b/app.json
@@ -22,6 +22,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "versionCode": 2,
       "package": "hnews.app"
     },
     "web": {
