--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hnews",
-  "version": "1.2.0",
+  "version": "1.3.1",
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start --dev-client",
@@ -9,42 +9,46 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^15.0.2",
     "@gluestack-style/react": "^1.0.48",
     "@gluestack-ui/config": "^1.1.18",
     "@gluestack-ui/themed": "^1.1.18",
     "@react-native-cookies/cookies": "^6.2.1",
     "@reduxjs/toolkit": "^2.2.3",
-    "@tamagui/config": "^1.94.0",
-    "@tamagui/toast": "^1.94.0",
+    "@tamagui/config": "^1.135.0",
+    "@tamagui/portal": "^1.135.0",
+    "@tamagui/toast": "^1.135.0",
     "@types/bluebird": "^3.5.42",
     "bluebird": "^3.7.2",
     "burnt": "^0.12.2",
     "dayjs": "^1.11.10",
-    "expo": "~50.0.14",
-    "expo-constants": "~15.4.5",
-    "expo-dev-client": "~3.3.11",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.8",
-    "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.12",
-    "expo-web-browser": "~12.8.2",
+    "expo": "^54.0.12",
+    "expo-constants": "~18.0.9",
+    "expo-dev-client": "~6.0.13",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "~15.0.8",
     "node-html-parser": "^6.1.13",
-    "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "^2.16.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-keychain": "^8.2.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "^13.4.0",
-    "react-native-webview": "^13.8.4",
+    "react-native-markdown-display": "^7.0.2",
+    "react-native-reanimated": "~4.1.2",
+    "react-native-safe-area-context": "~5.6.1",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1",
     "react-redux": "^9.1.0",
-    "tamagui": "^1.94.0"
+    "tamagui": "^1.135.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@react-native-community/cli": "^20.0.2",
+    "@types/react": "~19.1.10",
     "typescript": "^5.1.3"
   },
   "private": true
