--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,7 @@
 {
   "cli": {
-    "version": ">= 7.4.0"
+    "version": ">= 7.4.0",
+    "appVersionSource": "remote"
   },
   "build": {
     "development": {
