--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hnews",
-  "version": "1.3.1",
+  "version": "2.0.0",
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start --dev-client",
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-config": "^54.0.6",
     "@expo/vector-icons": "^15.0.2",
     "@gluestack-style/react": "^1.0.48",
     "@gluestack-ui/config": "^1.1.18",
@@ -25,9 +26,11 @@
     "expo": "^54.0.12",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.13",
+    "expo-font": "~14.0.8",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.10",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.12",
     "expo-web-browser": "~15.0.8",
     "node-html-parser": "^6.1.13",
     "react": "19.1.0",
@@ -40,10 +43,23 @@
     "react-native-safe-area-context": "~5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
     "react-redux": "^9.1.0",
     "tamagui": "^1.135.0"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "@react-native-cookies/cookies"
+        ]
+      }
+    }
+  },
+  "overrides": {
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
