--- a/app.json
+++ b/app.json
@@ -38,10 +38,8 @@
       }
     },
     "updates": {
-      "enabled": false,
-      "url": "https://u.expo.dev/15cf4545-901a-4d49-8ec7-f18f92a76818"
+      "enabled": false
     },
-    "runtimeVersion": "exposdk:54.0.12",
     "owner": "sid.premkumar"
   }
 }
