--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@gluestack-style/react": "^1.0.48",
     "@gluestack-ui/config": "^1.1.18",
     "@gluestack-ui/themed": "^1.1.18",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-cookies/cookies": "^6.2.1",
     "@reduxjs/toolkit": "^2.2.3",
     "@tamagui/config": "^1.135.0",
@@ -30,7 +31,6 @@
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.10",
     "expo-status-bar": "~3.0.8",
-    "expo-updates": "~29.0.12",
     "expo-web-browser": "~15.0.8",
     "node-html-parser": "^6.1.13",
     "react": "19.1.0",
